# eiskaltdcpp

./: .gitignore  CMakeLists.txt  INSTALL  README.md
.cursor/rules/: build-and-compat-safety.mdc  complexity-and-module-design.mdc  macos-self-contained-bundle.mdc  prefer-events-over-timers.mdc  verify-before-finishing.mdc
cmake/: FindDuckDB.cmake
dcpp/: AdcCommand.h  AdcHub.cpp  AdcHub.h  AdcHubBloom.cpp  AdcHubChat.cpp  AdcHubConnect.cpp  AdcHubConnectIn.cpp  AdcHubEvents.cpp  AdcHubInf.cpp  AdcHubInfo.cpp  AdcHubSearch.cpp  AdcHubStatus.cpp  AdcHubUsers.cpp  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketConnect.cpp  BufferedSocketRead.cpp  BufferedSocketWrite.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientConnect.cpp  ClientLocalIp.cpp  ClientManager.cpp  ClientManager.h  ClientManagerConnect.cpp  ClientManagerConnectHub.cpp  ClientManagerHubGuard.cpp  ClientManagerHubGuard.h  ClientManagerHubInfo.cpp  ClientManagerUserLookup.cpp  ClientReconnect.cpp  ClientSearch.cpp  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerAdcHandshake.cpp  ConnectionManagerAssoc.cpp  ConnectionManagerConnectOut.cpp  ConnectionManagerCooldown.cpp  ConnectionManagerFail.cpp  (+192 more)
dcpp/po/: en.po
dht/: BootstrapManager.cpp  BootstrapManager.h  BootstrapManagerHttp.cpp  CMakeLists.txt  ConnectionManager.cpp  DHT.cpp  DHT.h  TaskManager.cpp
eiskaltdcpp-cli/: CMakeLists.txt
eiskaltdcpp-daemon/: CMakeLists.txt  ServerManager.cpp  ServerThread.cpp  ServerThreadQueue.cpp  ServerThreadQueueParams.cpp  nasdc.cpp
eiskaltdcpp-gtk/: CMakeLists.txt
eiskaltdcpp-gtk/src/: SearchClient.cc  SearchMenu.cc  TransfersDisplay.hh  TransfersDownloadListeners.cc  TransfersOpen.cc  TransfersOpen.hh  TransfersUpload.cc  TransfersUpload.hh  finishedtransfers-manager.cc  finishedtransfers.cc  finishedtransfers.hh  hub.cc  mainwindow.cc  mainwindow.hh  search.cc  settingsdialog.cc  transfers.cc  transfers.hh  wulfor.cc  wulforStartup.cc  wulforStartup.hh
eiskaltdcpp-gtk/ui/: settingsdialog.ui  transfers.ui
eiskaltdcpp-qt/: CMakeLists.txt
eiskaltdcpp-qt/scriptengine/: ScriptEngine.cpp
eiskaltdcpp-qt/src/: ADLS.cpp  AboutDialog.h  Antispam.cpp  AppTheme.cpp  AppTheme.h  AppThemeChatDoc.cpp  AppThemeCombo.cpp  AppThemeControls.cpp  AppThemeHighlight.cpp  AppThemeInputs.cpp  ArenaWidgetManager.cpp  ChatEdit.cpp  ChatEdit.h  ChatEditComplete.cpp  ChatEditDrop.cpp  ChatSearchBar.cpp  ChatSearchBar.h  CmdDebug.cpp  DownloadQueue.cpp  DownloadQueue.h  DownloadQueueConnect.cpp  DownloadQueueContext.cpp  DownloadQueueContextMore.cpp  DownloadQueueDelegate.cpp  DownloadQueueIndex.cpp  DownloadQueueItem.cpp  DownloadQueueItems.cpp  DownloadQueueListen.cpp  DownloadQueueMenu.cpp  DownloadQueueModel.cpp  DownloadQueueModel.h  DownloadQueueModelData.cpp  DownloadQueueModelMut.cpp  DownloadQueueModelPath.cpp  DownloadQueueModelPrivate.h  DownloadQueueModelSort.cpp  DownloadQueueModelSort.h  DownloadQueueParams.cpp  DownloadQueuePrivate.h  DownloadToHistory.h  (+313 more)
eiskaltdcpp-qt/src/codeeditor/: codeeditor.cpp
eiskaltdcpp-qt/ui/: HubFrame.ui  UIFinishedTransfers.ui  UIPublicHubs.ui  UISearchFrame.ui  UISettingsConnection.ui  UISettingsDownloads.ui  UISettingsGUI.ui  UISettingsHistory.ui  UISettingsLog.ui  UIShareBrowser.ui  UITransferView.ui
extra/: upnpc.cpp
json/jsonrpc-cpp/: jsonrpc_httpserver.cpp  netstring.cpp
macos/: BundleHomebrewDylib.cmake  build-using-homebrew.sh  build.sh  homebrew-toolchain.cmake
